[gd_scene load_steps=12 format=3 uid="uid://cosc37m3bowe8"]

[ext_resource type="Texture2D" uid="uid://d3i5uhv7cwp4o" path="res://Globals/consoleBackgroundLarge.png" id="1_7gcdm"]
[ext_resource type="Script" path="res://psychescan/scripts/SceneTransition3.gd" id="2_b5kgy"]
[ext_resource type="PackedScene" uid="uid://icn4cxvh50yi" path="res://psychescan/texts/scannertext3.tscn" id="2_qf436"]
[ext_resource type="PackedScene" uid="uid://rkniskrqmb35" path="res://psychescan/sprites/incorrect.tscn" id="3_vpxig"]
[ext_resource type="AudioStream" uid="uid://buwrmofej0dv5" path="res://psychescan/assets/audio/proxSound.wav" id="5_4y83v"]
[ext_resource type="Texture2D" uid="uid://c2vquuvgf0nmi" path="res://psychescan/assets/textures/squareReticle.png" id="5_a2f54"]
[ext_resource type="AudioStream" uid="uid://bxxmw3llwoi57" path="res://psychescan/assets/audio/correct.wav" id="7_2ggvi"]
[ext_resource type="AudioStream" uid="uid://dhvsylxdlxxh" path="res://audio/incorrect.wav" id="8_8gnid"]
[ext_resource type="Texture2D" uid="uid://bduslsougetkd" path="res://psychescan/assets/textures/green light.png" id="9_mv61h"]
[ext_resource type="AudioStream" uid="uid://jv6cejdoyqie" path="res://psychescan/assets/audio/CRTHum.mp3" id="9_n7n2q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1n4vd"]
size = Vector2(80, 80)

[node name="background" type="StaticBody2D"]
collision_layer = 2
collision_mask = 2

[node name="main" type="Polygon2D" parent="."]
scale = Vector2(1.55089, 2.10742)
texture = ExtResource("1_7gcdm")
texture_scale = Vector2(2.67, 3.7)
polygon = PackedVector2Array(0, 0, 0, 0, 1120, 0, 1120, 512, 0, 512)

[node name="Incorrect" parent="." instance=ExtResource("3_vpxig")]
position = Vector2(1164, 128)

[node name="hitbox1" type="Area2D" parent="."]
position = Vector2(524, 427)
collision_layer = 2
collision_mask = 10
script = ExtResource("2_b5kgy")

[node name="reticleHitbox" type="CollisionShape2D" parent="hitbox1"]
position = Vector2(96, 32)
shape = SubResource("RectangleShape2D_1n4vd")

[node name="reticle" type="Polygon2D" parent="hitbox1"]
position = Vector2(-51, 7)
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_a2f54")
texture_offset = Vector2(-42, 7)
texture_scale = Vector2(15, 15)
polygon = PackedVector2Array(43, -6, 75, -6, 75, 26, 43, 26)

[node name="BeepAudio" type="AudioStreamPlayer" parent="hitbox1"]
stream = ExtResource("5_4y83v")
volume_db = -15.0

[node name="Label" parent="." instance=ExtResource("2_qf436")]
offset_left = 1184.0
offset_top = 150.0
offset_right = 1472.0
offset_bottom = 436.0
text = "Objective:
Scan the asteroid in
3 places










Current Instrument: 
Gamma-Ray/Neutron
Spectrometer
The Gamma-Ray and
Neutron Spectrometer
is used to map Psyche's
elemental composition"
visible_characters = 0
visible_ratio = 0.0

[node name="CorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2ggvi")
volume_db = -10.0

[node name="IncorrectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_8gnid")
volume_db = -10.0

[node name="CRTHumBackground" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_n7n2q")
volume_db = -15.0
autoplay = true
parameters/looping = false

[node name="Correct" type="PointLight2D" parent="."]
position = Vector2(1330, 739)
scale = Vector2(0.181952, 0.193103)
energy = 11.21
blend_mode = 2
texture = ExtResource("9_mv61h")

[connection signal="area_entered" from="hitbox1" to="hitbox1" method="_on_area2d_area_entered"]
[connection signal="area_exited" from="hitbox1" to="hitbox1" method="_on_area2d_area_exited"]
[connection signal="body_entered" from="hitbox1" to="hitbox1" method="_on_area2d_body_entered"]
[connection signal="body_exited" from="hitbox1" to="hitbox1" method="_on_area2d_body_exited"]
